Update git URLs to point to GitHub

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@ gr-bluetooth projects.  It is freely available under the
 
 <h3>Getting libbtbb</h3>
 <p>Libbtbb is built from source using either a released archive or the latest 
-code from our <a href="http://sourceforge.net/p/libbtbb/code/">git repository</a>.  
+code from our <a href="https://www.github.com/greatscottgadgets/libbtbb">git repository</a>.
 To get started, do either of the following:</p>
 <ul>
 <li><a href="http://sourceforge.net/projects/libbtbb/files/latest/download?source=files">
@@ -32,7 +32,7 @@ the <a href="https://lists.sourceforge.net/lists/listinfo/ubertooth-general">
 mailing list</a> or via IRC in #ubertooth on 
 <a href="http://freenode.net/irc_servers.shtml">chat.freenode.net</a></p>
 <p>Bugs may be reported and tracked in the 
-<a href="http://sourceforge.net/p/libbtbb/tickets/">ticketing system</a>.  
+<a href="https://github.com/greatscottgadgets/libbtbb/issues">ticketing system</a>.
 Although it often helps to mention the bug report on the 
 <a href="https://lists.sourceforge.net/lists/listinfo/ubertooth-general">
 Ubertooth mailing list</a> to be sure that it has been seen.</p>
