--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,10 @@ To get started, do either of the following:</p>
 <li><a href="http://sourceforge.net/projects/libbtbb/files/latest/download?source=files">
 Download the latest release</a></li>
 <li>or clone the git repository using the following command:
-<pre>git clone git@github.com:greatscottgadgets/libbtbb.git</pre></li>
-<li style="list-style-type:none">If you have a proxy that prevents you from 
-using the above URL, use https as follows:
 <pre>git clone https://github.com/greatscottgadgets/libbtbb.git</pre></li>	
+<li style="list-style-type:none">If you prefer to use ssh and have a GitHub
+account, you can use this command:
+<pre>git clone git@github.com:greatscottgadgets/libbtbb.git</pre></li>
 </ul>
 
 <h3>Support</h3>
