doc: remove old links to Freenode and SourceForge

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@ gr-bluetooth projects.  It is freely available under the
 code from our <a href="https://www.github.com/greatscottgadgets/libbtbb">git repository</a>.
 To get started, do either of the following:</p>
 <ul>
-<li><a href="http://sourceforge.net/projects/libbtbb/files/latest/download?source=files">
+<li><a href="https://github.com/greatscottgadgets/libbtbb/releases/latest">
 Download the latest release</a></li>
 <li>or clone the git repository using the following command:
 <pre>git clone https://github.com/greatscottgadgets/libbtbb.git</pre></li>	
@@ -26,15 +26,9 @@ account, you can use this command:
 </ul>
 
 <h3>Support</h3>
-<p>Support for libbtbb is provided by 
-<a href="http://ubertooth.sourceforge.net/">project Ubertooth</a>, either using 
-the <a href="https://lists.sourceforge.net/lists/listinfo/ubertooth-general">
-mailing list</a> or via IRC in #ubertooth on 
-<a href="http://freenode.net/irc_servers.shtml">chat.freenode.net</a></p>
+<p>Support for libbtbb is provided via
+<a href="https://github.com/greatscottgadgets/ubertooth">project Ubertooth</a>.</p>
 <p>Bugs may be reported and tracked in the 
-<a href="https://github.com/greatscottgadgets/libbtbb/issues">ticketing system</a>.
-Although it often helps to mention the bug report on the 
-<a href="https://lists.sourceforge.net/lists/listinfo/ubertooth-general">
-Ubertooth mailing list</a> to be sure that it has been seen.</p>
+<a href="https://github.com/greatscottgadgets/libbtbb/issues">ticketing system</a>.</p>
 </body>
 </html>
